unpackaged/main/default/objects/Forecast_Snapshot_Weekly__c/Forecast_Snapshot_Weekly__c.object-meta.xml
<CustomObject>
    <label>Forecast Snapshot Weekly</label>
    <nameField>
        <label>Forecast Snapshot Weekly Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Snapshots Weekly</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>