unpackaged/main/default/objects/Forecast_Snapshot_Weekly__c/fields/Forecast_Week__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Week__c</fullName>
    <formula>TEXT(CEILING(Day(Forecast_Date__c) / 7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Week</label>
    <type>Text</type>
</CustomField>