unpackaged/main/default/objects/Forecast_Snapshot_Weekly__c/fields/Jan_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Jan_Forecast_Amount__c</fullName>
    <label>Jan Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>