unpackaged/main/default/objects/Forecast_Snapshot_Weekly__c/fields/Marketing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Plan</label>
    <referenceTo>MarketingPlan__c</referenceTo>
    <relationshipLabel>Forecast Snapshots Weekly</relationshipLabel>
    <relationshipName>Forecast_Snapshots_Weekly</relationshipName>
    <type>Lookup</type>
</CustomField>